<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <EditText
        android:id="@+id/experience_edit_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_company"/>

    <EditText
        android:id="@+id/experience_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/experience_edit_start_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:hint="@string/hint_start_date"/>

        <EditText
            android:id="@+id/experience_edit_end_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:hint="@string/hint_end_date"/>

    </LinearLayout>

    <EditText
        android:id="@+id/experience_edit_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tasks"/>

    <TextView
        android:id="@+id/experience_edit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:padding="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_xsmall"
        android:layout_gravity="right"
        android:background="?attr/selectableItemBackground"/>

</LinearLayout>